syntax = "proto3";
package google.protobuf;
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";


message MsgSend {
  required string from_address = 1;
  required string to_address = 2;
  repeated Coin amount = 3;
}

message MsgDelegate {
  required string delegator_address = 1;
  required string validator_address = 2;
  Coin amount = 3;
}

message MsgUndelegate {
  required string delegator_address = 1;
  required string validator_address = 2;
  Coin amount = 3;
}

message MsgWithdrawDelegatorReward {
  required string delegator_address = 1;
  required string validator_address = 2;
}

message MsgExecuteContract {
  string sender = 1;
  string contract = 2;
  bytes msg = 3;
  repeated Coin funds = 5;
}

message Fee {
  repeated Coin amount  = 1;
  uint64 gas_limit = 2;
}

message Coin {
  string denom  = 1;
  string amount = 2;
}

message TxBody {
  repeated Any messages = 1;
  string memo = 2;
}

message PublicKey {
  bytes value = 1;
}


message Any {
  string type_url = 1;
  bytes value = 2;
}


message AuthInfo {
  repeated bytes signer_infos = 1;
  bytes fee = 2;
}

message SignerInfo {
  bytes public_key = 1;
  ModeInfo mode_info = 2;
  uint64 sequence = 3;
}

message ModeInfo {
  oneof sum {
    Single single = 1;
  }
  message Single {
    SignMode mode = 1;
  }
}


enum SignMode {
  SIGN_MODE_UNSPECIFIED = 0;
  SIGN_MODE_DIRECT = 1;
  SIGN_MODE_TEXTUAL = 2;
  SIGN_MODE_LEGACY_AMINO_JSON = 127;
}

message TxRaw {
  bytes body_bytes = 1;
  bytes auth_info_bytes = 2;
  repeated bytes signatures = 3;
}
